# mangata-node

./: .dockerignore  .gitignore  .versionrc  CHANGELOG.md  Cargo.lock.old  Cargo.toml  Dockerfile  Makefile  Mangata.md  README.md  cargo_wrapper.sh  compose.yml  docker-cargo.sh  docker-compose.yml  index.html  local.Dockerfile  package.json  public-tesnet-test_spec.json  run-result  testnetChainspec.json  tmp-bench-results.rs  versionUpdater.js
client/transaction-pool/: Cargo.toml
client/transaction-pool/graph/: Cargo.toml
client/transaction-pool/graph/src/: pool.rs
client/transaction-pool/src/: api.rs  error.rs  lib.rs  metrics.rs  revalidation.rs
client/transaction-pool/src/testing/: pool.rs
node/: Cargo.toml  dumb-test-file
node/benches/: block_production.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  command_helper.rs  lib.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: mangata_kusama.rs  mangata_rococo.rs  mod.rs
node_bk/: Cargo.toml
node_bk/src/: cli.rs  client.rs  command.rs  command_helper.rs  lib.rs  rpc.rs  service.rs
node_bk/src/chain_spec/: mangata_kusama.rs  mangata_rococo.rs
node_bk/src_template/: cli.rs  command.rs  rpc.rs  service.rs
node_bk/src_template/chain_spec/: mangata_kusama.rs  mangata_rococo.rs  mod.rs
pallets/asset-registry/: Cargo.toml
pallets/asset-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/assets/: Cargo.toml
pallets/assets-info/: Cargo.toml
pallets/assets-info/src/: lib.rs  mock.rs  tests.rs
pallets/assets/src/: lib.rs
pallets/bootstrap/: Cargo.toml
pallets/bootstrap/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
pallets/bridge/: Cargo.toml
pallets/bridge/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/bridged-asset/: Cargo.toml
pallets/bridged-asset/src/: lib.rs  mock.rs  tests.rs
pallets/crowdloan-rewards/: Cargo.toml
pallets/crowdloan-rewards/src/: benchmarks.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/encrypted-transactions/: Cargo.toml
pallets/encrypted-transactions/src/: lib.rs  mock.rs  tests.rs
pallets/encrypted-tx/: Cargo.toml
pallets/encrypted-tx/runtime-api/: Cargo.toml
pallets/encrypted-tx/runtime-api/src/: lib.rs
pallets/encrypted-tx/src/: lib.rs  mock.rs  tests.rs
pallets/eth-app/: Cargo.toml
pallets/eth-app/src/: lib.rs  mock.rs  payload.rs  tests.rs
pallets/fee-lock/: Cargo.toml
pallets/fee-lock/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/issuance/: Cargo.toml
pallets/issuance/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/maintenance/: Cargo.toml
pallets/maintenance/src/: lib.rs  mock.rs  tests.rs
pallets/mangata-traits/: Cargo.toml
pallets/mangata-traits/src/: lib.rs
pallets/metamask-signature/: Cargo.toml
pallets/metamask-signature-rpc/: Cargo.toml
pallets/metamask-signature-rpc/src/: lib.rs
pallets/metamask-signature-runtime-api/: Cargo.toml
pallets/metamask-signature-runtime-api/src/: lib.rs
pallets/metamask-signature/src/: lib.rs
pallets/multipurpose-liquidity/: Cargo.toml  lib.rs
pallets/multipurpose-liquidity/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  weights.rs
pallets/parachain-staking/: Cargo.toml  migrations.md
pallets/parachain-staking/src/: benchmarks.rs  lib.rs  mock.rs  set.rs  tests.rs  weights.rs
pallets/proof-of-stake/: Cargo.toml
pallets/proof-of-stake/rpc/: Cargo.toml
pallets/proof-of-stake/rpc/src/: lib.rs
pallets/proof-of-stake/runtime-api/: Cargo.toml
pallets/proof-of-stake/runtime-api/src/: lib.rs
pallets/proof-of-stake/src/: benchmarking.rs  lib.rs  mock.rs  reward_info.rs  schedule_rewards_calculator.rs  tests.rs  utils.rs  weights.rs
pallets/rolldown/: Cargo.toml
pallets/rolldown/rpc/: Cargo.toml
pallets/rolldown/rpc/src/: lib.rs
pallets/rolldown/runtime-api/: Cargo.toml
pallets/rolldown/runtime-api/src/: lib.rs
pallets/rolldown/src/: benchmarking.rs  eth_api.rs  lib.rs  messages.rs  mock.rs  roll_down.rs  tests.rs  weights.rs
pallets/rolldown/src/messages/: eth_abi.rs  mod.rs
pallets/sequencer-staking/: Cargo.toml
pallets/sequencer-staking/src/: lib.rs  mock.rs  tests.rs
pallets/stable-swap/: Cargo.toml
pallets/stable-swap/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/sudo-origin/: Cargo.toml  README.md
pallets/sudo-origin/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: mock.rs
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: constants.rs  lib.rs  migration.rs  xcm_config.rs
runtime/common/src/weights/: mod.rs
runtime/integration-test/: Cargo.toml
runtime/integration-test/src/: bootstrap.rs  identity.rs  lib.rs  proof_of_stake.rs  proxy.rs  setup.rs  xyk.rs
runtime/integration-test/src/xcm/: kusama_test_net.rs  kusama_xcm_transfer.rs  mod.rs
runtime/mangata/: Cargo.toml
runtime/mangata-kusama/: Cargo.toml
runtime/mangata-kusama/src/: constants.rs  lib.rs  migration.rs  migrations.rs  xcm_config.rs
runtime/mangata-kusama/src/weights/: block_weights.rs  extrinsic_weights.rs  frame_system.rs  frame_system_weights.rs  mod.rs  orml_asset_registry.rs  orml_asset_registry_weights.rs  orml_tokens.rs  orml_tokens_weights.rs  pallet_bootstrap.rs  pallet_bootstrap_weights.rs  pallet_collective_mangata.rs  pallet_collective_weights.rs  (+26 more)
runtime/mangata-rococo/: Cargo.toml
runtime/mangata-rococo/src/: constants.rs  lib.rs  migration.rs  migrations.rs  xcm_config.rs
runtime/src/: lib.rs
runtime/src/weights/: frame_system_weights.rs  mod.rs  orml_tokens_weights.rs  pallet_bootstrap_weights.rs  pallet_collective.rs  pallet_collective_weights.rs  pallet_crowdloan_rewards_weights.rs  pallet_elections_phragmen_weights.rs  pallet_issuance_weights.rs  pallet_session.rs  pallet_session_weights.rs  pallet_staking.rs  pallet_timestamp_weights.rs  pallet_treasury_weights.rs  pallet_utility_weights.rs  pallet_vesting_mangata_weights.rs  pallet_xyk_weights.rs  parachain_staking_weights.rs  xcm_asset_registry_weights.rs
(+7479 files in other folders)
