[profile.release]
panic = 'unwind'

[workspace]
members = [
	'node',
	'pallets/*',
	'rpc/nonce',
	'runtime',
]

[patch."https://github.com/mangata-finance/mangata-node"]
pallet-xyk = { path = "./pallets/xyk" }
mangata-primitives = {path = "./primitives/mangata"}
pallet-issuance = { path = "./pallets/issuance" }

[patch."https://github.com/mangata-finance/moonbeam"]
parachain-staking =  { git = "https://github.com/mangata-finance//moonbeam.git", branch = "feature/issuance-vesting-crowdloan" }

[patch."https://github.com/mangata-finance/crowdloan-rewards"]
pallet-crowdloan-rewards = { git = "https://github.com/mangata-finance//crowdloan-rewards.git", branch = "feature/issuance-vesting-crowdloan" }

[patch."https://github.com/mangata-finance/open-runtime-module-library"]
orml-tokens = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
orml-traits = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
orml-xtokens = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
orml-xcm-support = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
orml-unknown-tokens = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
orml-xcm = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }

[patch."https://github.com/paritytech/substrate"]
sp-debug-derive = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-tasks = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-authorship = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-storage = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-timestamp = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-trie = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-panic-handler = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-database = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-transaction-storage-proof = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-npos-elections-solution-type = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-npos-elections = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-serializer = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-version-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-version = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-application-crypto = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-wasm-interface = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-maybe-compressed-blob = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-std = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-offchain = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-state-machine = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-keyring = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-externalities = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
beefy-primitives = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-session = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-runtime-interface-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-runtime-interface = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-arithmetic = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-inherents = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-consensus-slots = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-consensus-aura = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-consensus-vrf = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-transaction-pool = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-io = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-staking = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-finality-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-api-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-api = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sp-blockchain = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-allocator = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-cli = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-executor-wasmtime = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-executor-wasmi = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-executor = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-executor-common = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-block-builder = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-block-builder-ver = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-rpc-server = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-keystore = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-telemetry = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-network-gossip = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-state-db = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-service = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-client-db = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-rpc-api = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-basic-authorship = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
# sc-basic-authorship-ver = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-sync-state-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-tracing-proc-macro = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-tracing = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-chain-spec = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-chain-spec-derive = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-light = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-offchain = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-utils = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
beefy-gadget = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
beefy-gadget-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-proposer-metrics = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-consensus-slots = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-consensus-babe = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-consensus-babe-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-consensus-epochs = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-consensus-uncles = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-consensus-aura = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-consensus = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-informant = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-transaction-pool = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-transaction-pool-api = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-finality-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-finality-grandpa-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-client-api = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-peerset = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
sc-network = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
substrate-test-client = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
substrate-wasm-builder = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
substrate-build-script-utils = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
fork-tree = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
frame-benchmarking-cli = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
remote-externalities = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
try-runtime-cli = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
substrate-frame-rpc-system = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-mmr-primitives = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-mmr = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-mmr-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-transaction-payment = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-transaction-payment-rpc = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-authorship = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-identity = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-timestamp = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-membership = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-babe = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-offences = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-nicks = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-im-online = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-utility = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-sudo = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-bags-list = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
frame-system-rpc-runtime-api = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
frame-support-procedural = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
frame-support-procedural-tools = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
frame-support-procedural-tools-derive = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
frame-support = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-aura = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
beefy-merkle-tree = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-beefy-mmr = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-vesting = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
frame-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-democracy = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
frame-executive = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-treasury = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-indices = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-election-provider-multi-phase = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-tips = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
frame-try-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-beefy = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-collective = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-session = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-bounties = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-elections-phragmen = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-scheduler = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-authority-discovery = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
frame-election-provider-support = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-staking-reward-curve = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-staking = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-grandpa = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-proxy = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-balances = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }
pallet-multisig = { git = "https://github.com/mangata-finance/substrate", branch = "feature/issuance-vesting-crowdloan" }

# [patch."https://github.com/mangata-finance/cumulus"]
# cumulus-client-cli = { path = "../cumulus/client/cli" }
# cumulus-client-collator = { path = "../cumulus/client/collator" }
# cumulus-client-consensus-aura = { path = "../cumulus/client/consensus/aura" }
# cumulus-client-consensus-common = { path = "../cumulus/client/consensus/common" }
# cumulus-client-network = { path = "../cumulus/client/network" }
# cumulus-client-service = { path = "../cumulus/client/service" }
# cumulus-pallet-aura-ext = { path = "../cumulus/pallets/aura-ext" }
# cumulus-pallet-dmp-queue = { path = "../cumulus/pallets/dmp-queue" }
# cumulus-pallet-parachain-system = { path = "../cumulus/pallets/parachain-system" }
# cumulus-pallet-xcm = { path = "../cumulus/pallets/xcm" }
# cumulus-pallet-xcmp-queue = { path = "../cumulus/pallets/xcmp-queue" }
# cumulus-primitives-core = { path = "../cumulus/primitives/core" }
# cumulus-primitives-parachain-inherent = { path = "../cumulus/primitives/parachain-inherent" }
# cumulus-primitives-timestamp = { path = "../cumulus/primitives/timestamp" }
# cumulus-primitives-utility = { path = "../cumulus/primitives/utility" }
# parachain-info = { path = "../cumulus/polkadot-parachains/pallets/parachain-info" }

[patch."https://github.com/mangata-finance/substrate"]
pallet-authorship = {git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-bags-list = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-transaction-payment-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-transaction-payment = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
frame-try-runtime = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
frame-system-rpc-runtime-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
frame-system = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-beefy = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-membership = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
frame-benchmarking = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-identity = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-session = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-aura = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-bounties = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-balances = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-tips = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-election-provider-multi-phase = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-beefy-mmr = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
beefy-merkle-tree = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-scheduler = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-multisig = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
frame-executive = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-im-online = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-treasury = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-utility = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-sudo = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-offences = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-democracy = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-grandpa = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
frame-election-provider-support = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-collective = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-mmr-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-mmr = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-mmr-primitives = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
frame-support = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
frame-support-procedural-tools-derive = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
frame-support-procedural-tools = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
frame-support-procedural = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-nicks = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-staking = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-staking-reward-curve = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-indices = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-babe = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-timestamp = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-elections-phragmen = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-proxy = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
pallet-vesting-mangata = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-informant = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-finality-grandpa-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-finality-grandpa = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
beefy-gadget-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
beefy-gadget = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-executor-wasmtime = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-executor-common = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-executor-wasmi = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-executor = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-network-gossip = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-transaction-pool-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-transaction-pool = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-tracing-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-tracing = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-client-db = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-sync-state-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-network = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-utils = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-block-builder-ver = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-keystore = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-rpc-server = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-light = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-client-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-service = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-basic-authorship-ver = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-block-builder = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-rpc-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-chain-spec-derive = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-chain-spec = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-proposer-metrics = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-peerset = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-basic-authorship = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-offchain = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-state-db = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-allocator = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-consensus = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-consensus-aura = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-consensus-uncles = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-consensus-epochs = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-consensus-slots = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-consensus-babe-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-consensus-babe = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-cli = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sc-telemetry = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
fork-tree = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
substrate-wasm-builder = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
try-runtime-cli = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
frame-benchmarking-cli = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
substrate-frame-rpc-system = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
remote-externalities = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
substrate-build-script-utils = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
substrate-prometheus-endpoint = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
substrate-test-client = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-panic-handler = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-inherents = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-authorship = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-storage = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-std = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-finality-grandpa = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
beefy-primitives = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-version-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-version = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-transaction-pool = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-ver = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-tracing = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-database = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-debug-derive = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-session = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
extrinsic-shuffler = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
ver-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-core = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-keyring = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-authority-discovery = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-tasks = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-runtime-interface-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-runtime-interface = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-arithmetic = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-keystore = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-api-proc-macro = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-api = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-rpc = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-maybe-compressed-blob = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-transaction-storage-proof = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-state-machine = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-block-builder = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-wasm-interface = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-npos-elections = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-npos-elections-solution-type = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-application-crypto = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-serializer = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-offchain = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-staking = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-trie = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-blockchain = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-externalities = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-consensus = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-consensus-aura = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-consensus-slots = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-consensus-vrf = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-consensus-babe = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-timestamp = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-runtime = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}
sp-io = { git = "https://github.com/mangata-finance//substrate", branch = "feature/issuance-vesting-crowdloan"}